updated new person form

--- a/views/new_person.erb
+++ b/views/new_person.erb
@@ -1,7 +1,7 @@
-<p><a href="/new_address">Add A New Contact</a></p>
+<p><a href="/new_person">Add A New Contact</a></p>
 <h1>Address Book:</h1>
 <ul>
-<% @names.each do |first, value|  %>
+<% @person.each do |first, value|  %>
 <li>
   <a href='/address/<%= first["first"] %>'><%= first["first"].capitalize %></a>
 </li>
