--- a/sinatra/views/form.erb
+++ b/sinatra/views/form.erb
@@ -7,14 +7,21 @@
     <form action="/contacts" method="post" >
       <label for="first">First Name</label><br>
       <input type="text" name="first" autofocus><br>
+
       <label for="last"> Last Name </label><br>
       <input type="text" name="last"><br>
+
       <label for="age"> Age </label><br>
       <input type="number" name="age"><br>
+
       <label for="gender"> Gender </label><br>
       <input type="text" name="gender"><br>
+
       <label for="dtgd"> Down To Get Down? </label><br>
       <input type="text" name="dtgd"><br>
+
+      <label for="phone"> Phone </label><br>
+      <input type="text" name="phone"><br>
 
       <button>Add A Friend</button>
     </form>
